--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@ body {
 <html>
 <body>
 
-<h1 style=font-size:500%>Cora's Core</h1>
-<h1>Balance Redefined</h1>
-<p>You Core. It is the very center of your physical being. Keeping it healthy and in top condition is vital to becoming the best athlete that you can be. Our dedicated and experienced  team of professionals will mold you day by day with extensive dietary, mental and muscle systems designed through years of research. Our clientele consist of world class athletes derived from a broad spectrum of sports including tennis, boxing, football and so on. Contact us today for a free estimate and start yourself on the path to a stronger you. Inside and out.
+<h1 style=font-size:600%
+<h1><font face="georgia" color="white">Cora's Core 
+<br>Balance Redefined<br></font></h1>
+
+<p style=font-size:125%>
+You Core. It is the very center of your physical being. Keeping it healthy and in top condition is vital to becoming the best athlete that you can be. Our dedicated and experienced  team of professionals will mold you day by day with extensive dietary, mental and muscle systems designed through years of research. Our clientele consist of world class athletes derived from a broad spectrum of sports including tennis, boxing, football and so on. Contact us today for a free estimate and start yourself on the path to a stronger you. Inside and out.
 </P>
-<P>
+
+<P style=font-size:125%>
 Founder & CEO,
 <br>
 Cora Jennings.
