--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,17 +15,22 @@ body {
 <body>
 
 <h1 style=font-size:600%
-<h1><font face="georgia" color="white">Cora's Core 
-<br>Balance Redefined<br></font></h1>
+<h1><font face="georgia" color="red">Cora's Core</h1>
+<h1 style=font-size:400%
+<h1><font face="Georgia" color="red">Balance Redefined.</h1>
 
-<p style=font-size:125%>
-You Core. It is the very center of your physical being. Keeping it healthy and in top condition is vital to becoming the best athlete that you can be. Our dedicated and experienced  team of professionals will mold you day by day with extensive dietary, mental and muscle systems designed through years of research. Our clientele consist of world class athletes derived from a broad spectrum of sports including tennis, boxing, football and so on. Contact us today for a free estimate and start yourself on the path to a stronger you. Inside and out.
+<p style=font-size:125%
+<p><font color="black">
+" You Core. It is the very center of your physical being. Keeping it healthy and in top condition is vital to becoming the best athlete that you can be. Our dedicated and experienced  team of professionals will mold you day by day with extensive dietary, mental and muscle systems designed through years of research. Our clientele consist of world class athletes derived from a broad spectrum of sports including tennis, boxing, football and so on. Contact us today for a free estimate and start yourself on the path to a stronger you. Inside and out."
 </P>
-
-<P style=font-size:125%>
-Founder & CEO,
 <br>
-Cora Jennings.
+
+<IMG SRC="https://media.istockphoto.com/photos/hamstring-stretch-picture-id155032422?k=6&m=155032422&s=612x612&w=0&h=WrJzwpyJxdXySLqCqUa4KXuy1zVEKYJMRWhwwSQQklc=" ALT="some text" WIDTH=300 HEIGHT=300>
+<br>
+<P style=font-size:125%>
+Cora Jennings,
+<br>
+Founder & CEO
 <br>
 Certified Fitness Instructor 
 </p>
@@ -32,3 +38,15 @@ Certified Fitness Instructor
 </body>
 </html>
 
+© 2018 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+API
+Training
+Shop
+Blog
+About
