--- a/index.html
+++ b/index.html
@@ -11,6 +11,50 @@ body {
 </body>
 </html>
 
+<!TEAM NOTE: top navigation menu>
+<!DOCTYPE html>
+<html>
+<style>
+.btn-group button {
+    background-color: #4CAF50; /* Green background */
+    border: 1px solid green; /* Green border */
+    color: white; /* White text */
+    padding: 10px 24px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    float: left; /* Float the buttons side by side */
+}
+
+/* Clear floats (clearfix hack) */
+.btn-group:after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.btn-group button:not(:last-child) {
+    border-right: none; /* Prevent double borders */
+}
+
+/* Add a background color on hover */
+.btn-group button:hover {
+    background-color: #3e8e41;
+}
+</style>
+<body>
+
+<div class="btn-group" style="width:100%">
+  <button style="width:25%">HOME</button>
+  <button style="width:25%">EQUIPMENT</button>
+  <button style="width:25%">CLASSES</button>
+  <button style="width:25%">PRICING</button>
+  <button style="width:25%">1 ON 1</button>
+  <button style="width:25%">CONTACT</button>
+  <button style="width:25%">TESTIMONIALS</button>
+</div>
+
+</body>
+</html>
+
 <!TEAM NOTE: logo and sub title for all pages>
 <html>
 <body>
@@ -42,3 +86,16 @@ Certified Fitness Instructor
   
 </body>
 </html>
+
+© 2018 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+API
+Training
+Shop
+Blog
+About
