--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-TEAM NOTE: webpage canvas color for all pages->
+<!--TEAM NOTE: webpage canvas color for all pages-->
 <!DOCTYPE html>
 <html>
 <head>
