--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
 </body>
 </html>
 
-<!TEAM NOTE: top navigation menu>
+<!--TEAM NOTE: top navigation menu-->
 <!DOCTYPE html>
 <html>
 <style>
@@ -55,7 +55,7 @@ body {
 </body>
 </html>
 
-<!TEAM NOTE: logo and sub title for all pages>
+<!--TEAM NOTE: logo and sub title for all pages-->
 <html>
 <body>
 
@@ -64,7 +64,7 @@ body {
 <h1 style=font-size:400%
 <h1><font face="Georgia" color="red">Balance Redefined.</h1>
 
-<!TEAM NOTE: intro paragraph for home page>
+<!--TEAM NOTE: intro paragraph for home page-->
 <p style=font-size:125%
 <p><font color="black">
 " You Core. It is the very center of your physical being. Keeping it healthy and in top condition is vital to becoming the best athlete that you can be. Our dedicated and experienced  team of professionals will mold you day by day with extensive dietary, mental and muscle systems designed through years of research. Our clientele consist of world class athletes derived from a broad spectrum of sports including tennis, boxing, football and so on. Contact us today for a free estimate and start yourself on the path to a stronger you. Inside and out."
@@ -75,7 +75,7 @@ body {
 <IMG SRC="https://media.istockphoto.com/photos/hamstring-stretch-picture-id155032422?k=6&m=155032422&s=612x612&w=0&h=WrJzwpyJxdXySLqCqUa4KXuy1zVEKYJMRWhwwSQQklc=" ALT="some text" WIDTH=300 HEIGHT=300>
 <br>
 
-<!TEAM NOTE: business owner namd and title>
+<!--TEAM NOTE: business owner namd and title-->
 <P style=font-size:125%>
 Cora Jennings,
 <br>
