--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
 </P>
 <br>
 
-<!TEAM NOTE: business owner photo for home page> 
+<!--TEAM NOTE: business owner photo for home page--> 
 <IMG SRC="https://media.istockphoto.com/photos/hamstring-stretch-picture-id155032422?k=6&m=155032422&s=612x612&w=0&h=WrJzwpyJxdXySLqCqUa4KXuy1zVEKYJMRWhwwSQQklc=" ALT="some text" WIDTH=300 HEIGHT=300>
 <br>
 
