--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
 </body>
 </html>
 
-<!--TEAM NOTE: top navigation menu-->
+<!--TEAM NOTE: top navigation menu for all pages-->
 <!DOCTYPE html>
 <html>
 <style>
