--- a/index.html
+++ b/index.html
@@ -15,24 +15,21 @@ body {
 <style>
 .btn-group button {
     background-color: #ffffff; /* White background */
-    border: 1px solid green; /* Green border */
-    color: #ff0000; /* White text */
-    padding: 10px 24px; /* Some padding */
+    border: 1px ff0000; /* Red border */
+    color: #ff0000; /* Red text */
+    padding: 5px 24px; /* Some padding */
     cursor: pointer; /* Pointer/hand icon */
     float: left; /* Float the buttons side by side */
 }
-
 /* Clear floats (clearfix hack) */
 .btn-group:after {
     content: "";
     clear: both;
     display: table;
 }
-
 .btn-group button:not(:last-child) {
     border-right: none; /* Prevent double borders */
 }
-
 /* Add a background color on hover */
 .btn-group button:hover {
     background-color: #e6e6e6;
@@ -56,11 +53,22 @@ body {
 <html>
 <body>
 
+<style>
+h.small {
+    line-height: 0.0;
+}
+
+</style>
+
+<h class="small">
 <h1 style=font-size:600%
 <h1><font face="georgia" color="red">Cora's Core</h1>
-<h1 style=font-size:400%
+<h1 style=font-size:200%
 <h1><font face="Georgia" color="red">Balance Redefined.</h1>
-
+</h>
+<br>
+<br>
+<br>
 <p style=font-size:125%
 <p><font color="black">
 " Your Core. It is the very center of your physical being. Keeping it healthy and in top condition is vital to becoming the best athlete that you can be. Our dedicated and experienced  team of professionals will mold you day by day with extensive dietary, mental and muscle systems designed through years of research. Our clientele consist of world class athletes derived from a broad spectrum of sports including tennis, boxing, football and so on. Contact us today for a free estimate and start yourself on the path to a stronger you. Inside and out."
@@ -80,3 +88,8 @@ Certified Fitness Instructor
   
 </body>
 </html>
+
+
+
+
+
