--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-      background-color:#99ccff;
+      background-color:#ffffff;
 }
 </style>
 </head>
@@ -64,8 +64,10 @@ h.small {
 <h1 style=font-size:600%
 <h1><font face="georgia" color="red">Cora's Core</h1>
 <h1 style=font-size:200%
-<h1><font face="Georgia" color="red">Balance Redefined.</h1>
+<h1><font face="Georgia" color="red">Balance Redefined.</h1>  
 </h>
+
+<IMG SRC="http://bpic.588ku.com/element_origin_min_pic/16/07/05/15577b62ac77128.jpg" ALT="some text" WIDTH=100 HEIGHT=100>
 <br>
 <br>
 <br>
@@ -88,6 +90,8 @@ Certified Fitness Instructor
   
 </body>
 </html>
+
+
 
 
 
