--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ body {
 <body>
 
 <div class="btn-group" style="width:100%">
-  <button onclick="window.location='https://github.com/Teletran1/Fitness_Site_By_SG/blob/master/EQUIPMENT'; return false;">HOME</button>
-  <button style="width:25%">EQUIPMENT</button>
+  <button onclick="window.location='https://teletran1.github.io/Fitness_Site_By_SG/'; return false;">HOME</button>
+  <button onclick="window.location='https://teletran1.github.io/Fitness_Site_By_SG_Equipment/'; return false;">EQUIPMENT</button>
   <button style="width:25%">CLASSES</button>
   <button style="width:25%">PRICING</button>
   <button style="width:25%">1 ON 1</button>
