--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@ h.small {
 <br>
 <br>
 <h class="small">
-<h1 style=font-size:600%
-<h1><font face="georgia" color="red">Cora's Core</h1>
+<span>
+<img src="https://i.imgur.com/Qya3G9E.jpg" title="source: imgur.com" /></a>
+</span>
+<img src="https://i.imgur.com/6oLIDdb.jpg" title="source: imgur.com" /></a>
+</span>
 <h1 style=font-size:200%
 <h1><font face="georgia" color="red">Balance Redefined.</h1>
 </h>
-
-<IMG SRC="http://bpic.588ku.com/element_origin_min_pic/16/07/05/15577b62ac77128.jpg" ALT="some text" WIDTH=100 HEIGHT=100>
-<br>
+<br> 
 <br>
 <br>
 <html>
